--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ body {
   border-radius: 20px;
 }
 
-/* Experience Timeline - با اصلاحات RTL */
+/* Experience Timeline - تایم‌لاین درست شده */
 .timeline {
   position: relative;
   margin: 60px 0;
@@ -593,24 +593,20 @@ body {
 .timeline-item {
   position: relative;
   margin-bottom: 60px;
-  width: 45%;
-  max-width: 45%;
+  width: calc(50% - 30px);
 }
 
-.timeline-item:nth-child(odd) {
+/* آیتم اول - چپ */
+.timeline-item:nth-child(1) {
   left: 0;
   text-align: right;
 }
 
-.timeline-item:nth-child(even) {
-  left: 55%;
-  text-align: left;
-}
-
-.timeline-item::before {
+.timeline-item:nth-child(1)::before {
   content: '';
   position: absolute;
   top: 30px;
+  right: -60px;
   width: 20px;
   height: 20px;
   background: var(--gold);
@@ -619,31 +615,23 @@ body {
   box-shadow: 0 0 20px rgba(251, 191, 36, 0.5);
 }
 
-.timeline-item:nth-child(odd)::before {
-  right: -60px;
-}
-
-.timeline-item:nth-child(even)::before {
-  left: -60px;
-}
-
-/* RTL Specific Fixes for Timeline */
-[dir="rtl"] .timeline-item:nth-child(odd) {
+/* آیتم دوم - راست */
+.timeline-item:nth-child(2) {
+  left: calc(50% + 30px);
   text-align: left;
 }
 
-[dir="rtl"] .timeline-item:nth-child(even) {
-  text-align: right;
-}
-
-[dir="rtl"] .timeline-item:nth-child(odd)::before {
+.timeline-item:nth-child(2)::before {
+  content: '';
+  position: absolute;
+  top: 30px;
   left: -60px;
-  right: auto;
-}
-
-[dir="rtl"] .timeline-item:nth-child(even)::before {
-  right: -60px;
-  left: auto;
+  width: 20px;
+  height: 20px;
+  background: var(--gold);
+  border-radius: 50%;
+  border: 4px solid var(--dark);
+  box-shadow: 0 0 20px rgba(251, 191, 36, 0.5);
 }
 
 .timeline-content {
@@ -887,29 +875,15 @@ body {
   }
   
   .timeline-item {
-    width: 100%;
-    max-width: 100%;
-    left: 0 !important;
-    text-align: left;
-  }
-  
-  .timeline-item::before {
-    left: 20px !important;
-    right: auto !important;
-  }
-  
-  .timeline-content {
-    margin-left: 60px;
-  }
-  
-  /* RTL fixes for mobile */
-  [dir="rtl"] .timeline-item {
+    width: calc(100% - 60px);
+    left: 60px !important;
     text-align: right;
   }
   
-  [dir="rtl"] .timeline-content {
-    margin-right: 60px;
-    margin-left: 0;
+  .timeline-item:nth-child(1)::before,
+  .timeline-item:nth-child(2)::before {
+    left: -90px;
+    right: auto;
   }
 }
 
@@ -1007,14 +981,14 @@ body {
     height: 270px;
   }
   
-  .timeline-content {
-    margin-left: 40px;
-    padding: 25px;
+  .timeline-item {
+    width: calc(100% - 40px);
+    left: 40px !important;
   }
   
-  [dir="rtl"] .timeline-content {
-    margin-right: 40px;
-    margin-left: 0;
+  .timeline-item:nth-child(1)::before,
+  .timeline-item:nth-child(2)::before {
+    left: -70px;
   }
   
   .skill-category,
