--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-74186290 safai
-
-
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
@@ -575,41 +572,47 @@ body {
   border-radius: 20px;
 }
 
-/* Experience Timeline - تایم‌لاین درست شده */
+/* Experience Timeline - اصلاح شده برای RTL */
 .timeline {
   position: relative;
   margin: 60px 0;
   width: 100%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
+/* خط وسط تایم‌لاین */
 .timeline::before {
   content: '';
   position: absolute;
-  left: 50%;
+  right: 50%;
   top: 0;
   bottom: 0;
   width: 3px;
   background: var(--gradient-main);
-  transform: translateX(-50%);
+  transform: translateX(50%);
 }
 
+/* آیتم‌های تایم‌لاین */
 .timeline-item {
   position: relative;
   margin-bottom: 60px;
   width: calc(50% - 30px);
+  clear: both;
 }
 
-/* آیتم اول - چپ */
+/* آیتم اول - راست */
 .timeline-item:nth-child(1) {
-  left: 0;
-  text-align: right;
+  float: right !important;
+  text-align: left !important;
 }
 
 .timeline-item:nth-child(1)::before {
   content: '';
   position: absolute;
   top: 30px;
-  right: -60px;
+  left: -60px;
   width: 20px;
   height: 20px;
   background: var(--gold);
@@ -618,17 +621,17 @@ body {
   box-shadow: 0 0 20px rgba(251, 191, 36, 0.5);
 }
 
-/* آیتم دوم - راست */
+/* آیتم دوم - چپ */
 .timeline-item:nth-child(2) {
-  left: calc(50% + 30px);
-  text-align: left;
+  float: left !important;
+  text-align: right !important;
 }
 
 .timeline-item:nth-child(2)::before {
   content: '';
   position: absolute;
   top: 30px;
-  left: -60px;
+  right: -60px;
   width: 20px;
   height: 20px;
   background: var(--gold);
@@ -873,20 +876,24 @@ body {
     justify-self: center;
   }
   
+  /* تایم‌لاین در تبلت */
   .timeline::before {
-    left: 30px;
+    right: 30px !important;
+    transform: none !important;
   }
   
   .timeline-item {
-    width: calc(100% - 60px);
-    left: 60px !important;
-    text-align: right;
+    width: calc(100% - 80px) !important;
+    float: none !important;
+    text-align: right !important;
+    margin-right: 80px !important;
+    margin-left: 0 !important;
   }
   
   .timeline-item:nth-child(1)::before,
   .timeline-item:nth-child(2)::before {
-    left: -90px;
-    right: auto;
+    right: -90px !important;
+    left: auto !important;
   }
 }
 
@@ -984,14 +991,15 @@ body {
     height: 270px;
   }
   
+  /* تایم‌لاین در موبایل */
   .timeline-item {
-    width: calc(100% - 40px);
-    left: 40px !important;
+    width: calc(100% - 60px) !important;
+    margin-right: 60px !important;
   }
   
   .timeline-item:nth-child(1)::before,
   .timeline-item:nth-child(2)::before {
-    left: -70px;
+    right: -70px !important;
   }
   
   .skill-category,
