--- a/index.html
+++ b/index.html
@@ -397,12 +397,14 @@ body {
   margin: 0 auto;
   width: 100%;
   box-sizing: border-box;
+  clear: both; /* این خط اضافه شد */
 }
 
 .section-header {
   text-align: center;
   margin-bottom: 80px;
   animation: fadeInUp 0.8s ease-out;
+  clear: both; /* این خط اضافه شد */
 }
 
 .section-badge {
@@ -573,6 +575,15 @@ body {
 }
 
 /* Experience Timeline - اصلاح شده برای RTL */
+.experience-section {
+  padding: 120px 30px;
+  max-width: 1400px;
+  margin: 0 auto;
+  width: 100%;
+  box-sizing: border-box;
+  clear: both; /* Clear float از timeline */
+}
+
 .timeline {
   position: relative;
   margin: 60px 0;
@@ -592,6 +603,13 @@ body {
   width: 3px;
   background: var(--gradient-main);
   transform: translateX(50%);
+}
+
+/* Clear floats بعد از timeline */
+.timeline::after {
+  content: '';
+  display: table;
+  clear: both;
 }
 
 /* آیتم‌های تایم‌لاین */
@@ -767,6 +785,7 @@ body {
   padding: 40px 30px;
   border-top: 1px solid rgba(99, 102, 241, 0.1);
   color: var(--text-secondary);
+  clear: both; /* این خط اضافه شد */
 }
 
 .footer-text {
@@ -944,6 +963,10 @@ body {
   }
   
   .section {
+    padding: 80px 20px;
+  }
+  
+  .experience-section {
     padding: 80px 20px;
   }
   
@@ -1281,7 +1304,7 @@ body {
   </section>
 
   <!-- Experience Section -->
-  <section class="section" id="experience">
+  <section class="experience-section" id="experience">
     <div class="section-header fade-in">
       <div class="section-badge" data-fa="مسیر شغلی" data-en="Career Path">مسیر شغلی</div>
       <h2 class="section-title" data-fa="تجربه‌های کاری" data-en="Work Experience">تجربه‌های کاری</h2>
@@ -1405,7 +1428,7 @@ body {
 // Smooth scrolling for navigation links
 document.addEventListener('DOMContentLoaded', function() {
   const navLinks = document.querySelectorAll('.nav-link');
-  const sections = document.querySelectorAll('.section, .hero');
+  const sections = document.querySelectorAll('.section, .hero, .experience-section');
   const scrollTopBtn = document.querySelector('.scroll-top');
 
   // Navigation click handlers
