--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@ html {
 
 body {
   font-family: 'Vazirmatn', 'Poppins', sans-serif;
-  background: var(--dark);
+  background: 
+    linear-gradient(135deg, rgba(15, 23, 42, 0.95) 0%, rgba(30, 41, 59, 0.9) 50%, rgba(51, 65, 85, 0.85) 100%),
+    url('64c69643-4b0b-4874-a276-92f9c99412de.png');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   color: var(--text-primary);
   line-height: 1.7;
   overflow-x: hidden;
@@ -100,7 +106,7 @@ body {
   top: 0;
   width: 100%;
   padding: 20px 0;
-  background: rgba(15, 23, 42, 0.8);
+  background: rgba(15, 23, 42, 0.9);
   backdrop-filter: blur(20px);
   border-bottom: 1px solid rgba(99, 102, 241, 0.2);
   z-index: 1000;
@@ -215,7 +221,7 @@ body {
   align-items: center;
   justify-content: center;
   padding: 120px 30px 60px;
-  background: var(--gradient-hero);
+  background: rgba(15, 23, 42, 0.7);
   position: relative;
   overflow: hidden;
   width: 100%;
@@ -228,7 +234,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.05'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E") repeat;
+  background: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.03'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E") repeat;
   z-index: 0;
 }
 
@@ -255,14 +261,14 @@ body {
   display: inline-flex;
   align-items: center;
   gap: 8px;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(10px);
   padding: 8px 20px;
   border-radius: 50px;
   font-size: 0.9rem;
   font-weight: 500;
   margin-bottom: 25px;
-  border: 1px solid rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .hero-badge .badge-icon {
@@ -289,14 +295,14 @@ body {
 
 .hero-subtitle {
   font-size: 1.3rem;
-  color: rgba(255, 255, 255, 0.9);
+  color: rgba(255, 255, 255, 0.95);
   margin-bottom: 15px;
   font-weight: 600;
 }
 
 .hero-description {
   font-size: 1.1rem;
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.85);
   line-height: 1.8;
   margin-bottom: 40px;
 }
@@ -329,10 +335,10 @@ body {
 }
 
 .btn-secondary {
-  background: transparent;
+  background: rgba(255, 255, 255, 0.1);
   color: white;
   padding: 16px 32px;
-  border: 2px solid rgba(255, 255, 255, 0.3);
+  border: 2px solid rgba(255, 255, 255, 0.4);
   border-radius: 50px;
   text-decoration: none;
   font-weight: 600;
@@ -340,11 +346,12 @@ body {
   align-items: center;
   gap: 10px;
   transition: all 0.3s ease;
+  backdrop-filter: blur(10px);
 }
 
 .btn-secondary:hover {
-  background: rgba(255, 255, 255, 0.1);
-  border-color: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.2);
+  border-color: rgba(255, 255, 255, 0.7);
   transform: translateY(-2px);
 }
 
@@ -378,7 +385,7 @@ body {
   height: 420px;
   object-fit: cover;
   border-radius: 50%;
-  border: 4px solid rgba(255, 255, 255, 0.2);
+  border: 4px solid rgba(255, 255, 255, 0.3);
   box-shadow: var(--shadow-xl);
   transition: all 0.5s ease;
   position: relative;
@@ -399,6 +406,9 @@ body {
   width: 100%;
   box-sizing: border-box;
   clear: both;
+  background: rgba(15, 23, 42, 0.8);
+  backdrop-filter: blur(10px);
+  margin-bottom: 0;
 }
 
 .section-header {
@@ -410,14 +420,14 @@ body {
 
 .section-badge {
   display: inline-block;
-  background: rgba(99, 102, 241, 0.1);
+  background: rgba(99, 102, 241, 0.15);
   color: var(--primary);
   padding: 8px 20px;
   border-radius: 50px;
   font-size: 0.9rem;
   font-weight: 600;
   margin-bottom: 20px;
-  border: 1px solid rgba(99, 102, 241, 0.2);
+  border: 1px solid rgba(99, 102, 241, 0.3);
 }
 
 .section-title {
@@ -470,11 +480,12 @@ body {
 }
 
 .stat-card {
-  background: var(--dark-light);
+  background: rgba(30, 41, 59, 0.8);
+  backdrop-filter: blur(10px);
   padding: 30px;
   border-radius: 20px;
   text-align: center;
-  border: 1px solid rgba(99, 102, 241, 0.1);
+  border: 1px solid rgba(99, 102, 241, 0.2);
   transition: all 0.3s ease;
 }
 
@@ -508,10 +519,11 @@ body {
 }
 
 .skill-category {
-  background: var(--dark-light);
+  background: rgba(30, 41, 59, 0.8);
+  backdrop-filter: blur(10px);
   padding: 40px;
   border-radius: 20px;
-  border: 1px solid rgba(99, 102, 241, 0.1);
+  border: 1px solid rgba(99, 102, 241, 0.2);
   transition: all 0.3s ease;
 }
 
@@ -583,6 +595,8 @@ body {
   width: 100%;
   box-sizing: border-box;
   clear: both;
+  background: rgba(15, 23, 42, 0.8);
+  backdrop-filter: blur(10px);
 }
 
 .timeline {
@@ -655,10 +669,11 @@ body {
 }
 
 .timeline-content {
-  background: var(--dark-light);
+  background: rgba(30, 41, 59, 0.8);
+  backdrop-filter: blur(10px);
   padding: 35px;
   border-radius: 20px;
-  border: 1px solid rgba(99, 102, 241, 0.1);
+  border: 1px solid rgba(99, 102, 241, 0.2);
   transition: all 0.3s ease;
   position: relative;
 }
@@ -706,7 +721,7 @@ body {
 }
 
 .timeline-skill {
-  background: rgba(99, 102, 241, 0.1);
+  background: rgba(99, 102, 241, 0.15);
   color: var(--primary);
   padding: 4px 12px;
   border-radius: 15px;
@@ -723,11 +738,12 @@ body {
 }
 
 .contact-card {
-  background: var(--dark-light);
+  background: rgba(30, 41, 59, 0.8);
+  backdrop-filter: blur(10px);
   padding: 40px 30px;
   border-radius: 20px;
   text-align: center;
-  border: 1px solid rgba(99, 102, 241, 0.1);
+  border: 1px solid rgba(99, 102, 241, 0.2);
   transition: all 0.3s ease;
 }
 
@@ -776,10 +792,11 @@ body {
 
 /* Footer */
 .footer {
-  background: var(--dark-light);
+  background: rgba(30, 41, 59, 0.9);
+  backdrop-filter: blur(10px);
   text-align: center;
   padding: 40px 30px;
-  border-top: 1px solid rgba(99, 102, 241, 0.1);
+  border-top: 1px solid rgba(99, 102, 241, 0.2);
   color: var(--text-secondary);
   clear: both;
 }
@@ -912,6 +929,10 @@ body {
 }
 
 @media (max-width: 768px) {
+  body {
+    background-attachment: scroll;
+  }
+  
   .mobile-menu {
     display: flex;
   }
