--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   --text-muted: #64748b;
   
   --gradient-main: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-  --gradient-hero: linear-gradient(135deg, #4f46e5 0%, #7c3aed 50%, #db2777 100%);
+  --gradient-hero: linear-gradient(135deg, rgba(79,70,229,0.8) 0%, rgba(124,58,237,0.8) 50%, rgba(219,39,119,0.8) 100%);
   --gradient-gold: linear-gradient(135deg, #fbbf24 0%, #f59e0b 100%);
   --gradient-success: linear-gradient(135deg, #10b981 0%, #059669 100%);
   
@@ -53,13 +53,7 @@ html {
 
 body {
   font-family: 'Vazirmatn', 'Poppins', sans-serif;
-  background: 
-    linear-gradient(135deg, rgba(15, 23, 42, 0.95) 0%, rgba(30, 41, 59, 0.9) 50%, rgba(51, 65, 85, 0.85) 100%),
-    url('64c69643-4b0b-4874-a276-92f9c99412de.png');
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
+  background: var(--dark);
   color: var(--text-primary);
   line-height: 1.7;
   overflow-x: hidden;
@@ -106,7 +100,7 @@ body {
   top: 0;
   width: 100%;
   padding: 20px 0;
-  background: rgba(15, 23, 42, 0.9);
+  background: rgba(15, 23, 42, 0.8);
   backdrop-filter: blur(20px);
   border-bottom: 1px solid rgba(99, 102, 241, 0.2);
   z-index: 1000;
@@ -221,7 +215,11 @@ body {
   align-items: center;
   justify-content: center;
   padding: 120px 30px 60px;
-  background: rgba(15, 23, 42, 0.7);
+  background-image: var(--gradient-hero), url('64c69643-4b0b-4874-a276-92f9c99412de.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-blend-mode: multiply;
   position: relative;
   overflow: hidden;
   width: 100%;
@@ -234,7 +232,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.03'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E") repeat;
+  background: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.05'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E") repeat;
   z-index: 0;
 }
 
@@ -261,14 +259,14 @@ body {
   display: inline-flex;
   align-items: center;
   gap: 8px;
-  background: rgba(255, 255, 255, 0.15);
+  background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(10px);
   padding: 8px 20px;
   border-radius: 50px;
   font-size: 0.9rem;
   font-weight: 500;
   margin-bottom: 25px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .hero-badge .badge-icon {
@@ -295,14 +293,14 @@ body {
 
 .hero-subtitle {
   font-size: 1.3rem;
-  color: rgba(255, 255, 255, 0.95);
+  color: rgba(255, 255, 255, 0.9);
   margin-bottom: 15px;
   font-weight: 600;
 }
 
 .hero-description {
   font-size: 1.1rem;
-  color: rgba(255, 255, 255, 0.85);
+  color: rgba(255, 255, 255, 0.8);
   line-height: 1.8;
   margin-bottom: 40px;
 }
@@ -335,10 +333,10 @@ body {
 }
 
 .btn-secondary {
-  background: rgba(255, 255, 255, 0.1);
+  background: transparent;
   color: white;
   padding: 16px 32px;
-  border: 2px solid rgba(255, 255, 255, 0.4);
+  border: 2px solid rgba(255, 255, 255, 0.3);
   border-radius: 50px;
   text-decoration: none;
   font-weight: 600;
@@ -346,12 +344,11 @@ body {
   align-items: center;
   gap: 10px;
   transition: all 0.3s ease;
-  backdrop-filter: blur(10px);
 }
 
 .btn-secondary:hover {
-  background: rgba(255, 255, 255, 0.2);
-  border-color: rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.1);
+  border-color: rgba(255, 255, 255, 0.6);
   transform: translateY(-2px);
 }
 
@@ -385,7 +382,7 @@ body {
   height: 420px;
   object-fit: cover;
   border-radius: 50%;
-  border: 4px solid rgba(255, 255, 255, 0.3);
+  border: 4px solid rgba(255, 255, 255, 0.2);
   box-shadow: var(--shadow-xl);
   transition: all 0.5s ease;
   position: relative;
@@ -406,9 +403,6 @@ body {
   width: 100%;
   box-sizing: border-box;
   clear: both;
-  background: rgba(15, 23, 42, 0.8);
-  backdrop-filter: blur(10px);
-  margin-bottom: 0;
 }
 
 .section-header {
@@ -420,14 +414,14 @@ body {
 
 .section-badge {
   display: inline-block;
-  background: rgba(99, 102, 241, 0.15);
+  background: rgba(99, 102, 241, 0.1);
   color: var(--primary);
   padding: 8px 20px;
   border-radius: 50px;
   font-size: 0.9rem;
   font-weight: 600;
   margin-bottom: 20px;
-  border: 1px solid rgba(99, 102, 241, 0.3);
+  border: 1px solid rgba(99, 102, 241, 0.2);
 }
 
 .section-title {
@@ -480,12 +474,11 @@ body {
 }
 
 .stat-card {
-  background: rgba(30, 41, 59, 0.8);
-  backdrop-filter: blur(10px);
+  background: var(--dark-light);
   padding: 30px;
   border-radius: 20px;
   text-align: center;
-  border: 1px solid rgba(99, 102, 241, 0.2);
+  border: 1px solid rgba(99, 102, 241, 0.1);
   transition: all 0.3s ease;
 }
 
@@ -519,11 +512,10 @@ body {
 }
 
 .skill-category {
-  background: rgba(30, 41, 59, 0.8);
-  backdrop-filter: blur(10px);
+  background: var(--dark-light);
   padding: 40px;
   border-radius: 20px;
-  border: 1px solid rgba(99, 102, 241, 0.2);
+  border: 1px solid rgba(99, 102, 241, 0.1);
   transition: all 0.3s ease;
 }
 
@@ -595,8 +587,6 @@ body {
   width: 100%;
   box-sizing: border-box;
   clear: both;
-  background: rgba(15, 23, 42, 0.8);
-  backdrop-filter: blur(10px);
 }
 
 .timeline {
@@ -669,11 +659,10 @@ body {
 }
 
 .timeline-content {
-  background: rgba(30, 41, 59, 0.8);
-  backdrop-filter: blur(10px);
+  background: var(--dark-light);
   padding: 35px;
   border-radius: 20px;
-  border: 1px solid rgba(99, 102, 241, 0.2);
+  border: 1px solid rgba(99, 102, 241, 0.1);
   transition: all 0.3s ease;
   position: relative;
 }
@@ -721,7 +710,7 @@ body {
 }
 
 .timeline-skill {
-  background: rgba(99, 102, 241, 0.15);
+  background: rgba(99, 102, 241, 0.1);
   color: var(--primary);
   padding: 4px 12px;
   border-radius: 15px;
@@ -738,12 +727,11 @@ body {
 }
 
 .contact-card {
-  background: rgba(30, 41, 59, 0.8);
-  backdrop-filter: blur(10px);
+  background: var(--dark-light);
   padding: 40px 30px;
   border-radius: 20px;
   text-align: center;
-  border: 1px solid rgba(99, 102, 241, 0.2);
+  border: 1px solid rgba(99, 102, 241, 0.1);
   transition: all 0.3s ease;
 }
 
@@ -792,11 +780,10 @@ body {
 
 /* Footer */
 .footer {
-  background: rgba(30, 41, 59, 0.9);
-  backdrop-filter: blur(10px);
+  background: var(--dark-light);
   text-align: center;
   padding: 40px 30px;
-  border-top: 1px solid rgba(99, 102, 241, 0.2);
+  border-top: 1px solid rgba(99, 102, 241, 0.1);
   color: var(--text-secondary);
   clear: both;
 }
@@ -929,10 +916,6 @@ body {
 }
 
 @media (max-width: 768px) {
-  body {
-    background-attachment: scroll;
-  }
-  
   .mobile-menu {
     display: flex;
   }
